FIXED: [ 328068 ] Send SIGINT before own input command to embedded terminal

To avoid unwanted behaviour by line concatenation.

BUG: 328068